--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,13 @@
-REMOTE_HOST="your_remote_host"
-REMOTE_USER="your_username"
-SSH_PORT=22
-OLLAMA_BASE_URL="http://your_remote_host:11434/v1" 
+# Remote Ollama Configuration (required only for remote setup)
+OLLAMA_REMOTE_HOST=your-server.example.com  # Remote server hostname or IP
+OLLAMA_REMOTE_USER=username                 # SSH username for remote server
+OLLAMA_SSH_KEY=~/.ssh/id_rsa               # Path to SSH private key
+OLLAMA_REMOTE_PORT=11434                    # Ollama port on remote server
+
+# Local Configuration (optional, defaults shown below)
+OLLAMA_MODEL=llama2        # Model to use (llama2, codellama, etc.)
+OLLAMA_LOCAL_PORT=11434    # Local port for Ollama server
+
+# AutoGen Configuration (optional)
+AUTOGEN_USE_DOCKER=False   # Disable Docker for code execution
+AUTOGEN_WORKDIR=workspace  # Directory for generated code 
