--- a/config/requirements.txt
+++ b/config/requirements.txt
@@ -1,6 +1,17 @@
-pyautogen>=0.2.8
+crewai==0.11.0
+langchain==0.1.7
+langchain-core==0.1.22
+langchain-community==0.0.20
+langchain-openai==0.0.2.post1
+pydantic>=2.5.2
 requests>=2.31.0
 termcolor>=2.3.0
 python-dotenv>=1.0.0
-fix-busted-json==0.0.18
-ollama>=0.1.0 
+ollama>=0.1.6
+duckduckgo-search>=4.1.1
+typing-extensions>=4.8.0
+httpx>=0.25.0
+openai>=1.3.0
+beautifulsoup4>=4.12.2
+PyYAML>=6.0.1
+tenacity>=8.1.0 
