--- a/config/requirements.txt
+++ b/config/requirements.txt
@@ -1,9 +1,9 @@
-crewai==0.11.0
-crewai_tools==0.1.0
-langchain==0.1.7
-langchain-core==0.1.22
-langchain-community==0.0.20
-langchain-openai==0.0.2.post1
+crewai>=0.11.0
+crewai_tools>=0.1.0
+langchain>=0.1.7
+langchain-core>=0.1.22
+langchain-community>=0.0.20
+langchain-openai>=0.0.5
 pydantic>=2.5.2
 requests>=2.31.0
 termcolor>=2.3.0
@@ -15,4 +15,5 @@ httpx>=0.25.0
 openai>=1.3.0
 beautifulsoup4>=4.12.2
 PyYAML>=6.0.1
-tenacity>=8.1.0 
+tenacity>=8.1.0
+opencv-python>=4.8.0 
