Switch to deepseek-coder model with optimized configurations

--- a/config/requirements.txt
+++ b/config/requirements.txt
@@ -3,7 +3,7 @@ crewai_tools>=0.1.0
 langchain>=0.1.7
 langchain-core>=0.1.22
 langchain-community>=0.0.20
-langchain-openai>=0.0.5
+langchain-ollama>=0.1.1
 pydantic>=2.5.2
 requests>=2.31.0
 termcolor>=2.3.0
